// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui - PhoneInput > should call onValueChange with parsed metadata 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_1e_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_1e_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should control the value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_4_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_4_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should display error message 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_c_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="true"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-describedby="_r_d_"
          aria-invalid="true"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_c_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            AlertCircleIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_d_"
        role="status"
      >
        Invalid phone number format
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should have a placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_m_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇺🇸
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_m_"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_8_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="true"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="true"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          disabled=""
          id="phone-_r_8_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-_r_0_"
      >
        Phone
      </label>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_0_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with required field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="phone-_r_h_"
        >
          Phone
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        >
          *
        </span>
      </div>
      <div
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
          data-disabled="false"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-_r_h_"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          required=""
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
